Improved RestAPI bundle for jakarta.rs usage